syntax = "proto3";

package rivet.backend.pkg.party.msg.invite_destroy;

import "proto/common.proto";

/// name = "msg-party-invite-destroy"
/// parameters = [
/// 	{ name = "invite_id" },
/// ]
message Message {
	rivet.common.Uuid invite_id = 1;
	// Don't publish party updated messages.
	bool skip_party_updated = 2;
}
